Tests/fail/fail_9.mason
proc foo(f: f32, f: f64);